--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "pretty": " npx prettier --write ."
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.7",
+    "autoprefixer": "^9.8.8",
+    "postcss": "^7.0.39",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.3"
+    "react-router-dom": "^7.5.3",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
