--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
     "autoprefixer": "^9.8.8",
+    "framer-motion": "^12.15.0",
     "postcss": "^7.0.39",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
