--- a/package.json
+++ b/package.json
@@ -17,14 +17,18 @@
     "postcss": "^7.0.39",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-force-graph-3d": "^1.26.1",
     "react-router-dom": "^7.5.3",
     "recharts": "^2.15.3",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+    "three": "^0.177.0",
+    "three-spritetext": "^1.9.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
+    "@types/three": "^0.176.0",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
