add functions for vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,8 @@
 {
-  "rewrites": [{ "source": "/about", "destination": "/" }]
+  "rewrites": [{ "source": "/about", "destination": "/" }],
+  "functions": {
+    "server/index.ts": {
+      "runtime": "@vercel/node@18"
+    }
+  }
 }
