Use updated URL, amend vercel config

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,3 @@
 {
-  "rewrites": [{ "source": "/about", "destination": "/" }],
-  "functions": {
-    "server/index.ts": {
-      "runtime": "@vercel/node@18"
-    }
-  }
+  "rewrites": [{ "source": "/about", "destination": "/" }]
 }
