--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
-    "autoprefixer": "^9.8.8",
+    "autoprefixer": "^10.4.21",
     "framer-motion": "^12.15.0",
-    "postcss": "^7.0.39",
+    "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-force-graph-3d": "^1.26.1",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.5.3",
     "recharts": "^2.15.3",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+    "tailwindcss": "^4.1.12",
     "three": "^0.177.0",
     "three-spritetext": "^1.9.6"
   },
